# luckypay

./: .gitignore  Anchor.toml  SWITCHBOARD_VRF_GUIDE.md  package-lock.json
programs/luckpay/: Cargo.toml
programs/luckpay/src/: lib.rs
sdk/: example.ts  luckpay-sdk.ts
tests/: luckpay.ts  simple-test.ts
ui/: next.config.js  package-lock.json  package.json  tailwind.config.js
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/components/: LuckPayGameAddictive.tsx  WalletContextProvider.tsx
ui/app/hooks/: useLuckPaySimple.ts
